--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&family=Raleway:wght@800&display=swap" rel="stylesheet">
+
 <meta charset="utf-8" />
 <title>Add a default marker</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
-<style>
-  body { margin: 0; padding: 0; }
-  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-  .map-overlay {
-    position: absolute;
-    left: 0;
-    padding: 10px;
-  }
-</style>
+<link rel="stylesheet" href="styles.css">
+
+
 </head> 
+
+
 
 <body>
 
 <div id="map"></div>
 <div class="map-overlay top">
-  <button style="font-size: 2em;" onclick="move()">
+  <button class="btn" onclick="move()">
     Show stops between MIT and Harvard
   </button>
 </div>
@@ -31,7 +35,7 @@
 
   var map = new mapboxgl.Map({
         container: 'map', //this references the div map
-        style: 'mapbox://styles/mapbox/streets-v11',
+        style: 'mapbox://styles/mapbox/outdoors-v11',
         center: [-71.091542,42.358862], 
         zoom: 14 //initial zoom
     });
