--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&family=Raleway:wght@800&display=swap" rel="stylesheet">
 
 <meta charset="utf-8" />
-<title>Add a default marker</title>
+<title>Bus tracker</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
 <link rel="stylesheet" href="styles.css">
 
-
+    <!-- adding favicon -->
+    <link rel="icon" type="image/x-icon" href="../adrigalle.github.io/images/icons/Bus-icon.png">
 </head> 
 
 
