--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="styles.css">
 
     <!-- adding favicon -->
-    <link rel="icon" type="image/x-icon" href="../adrigalle.github.io/images/icons/Bus-icon.png">
+    <link rel="icon" type="image/x-icon" href="../adrigalle.github.io/images/icons/svg/Bus.svg">
 </head> 
 
 
